--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -17,9 +17,64 @@ body {
 .header {
     width: 100%;
     height: pxTorem(44px);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 pxTorem(10px);
+    box-sizing: border-box;
+    font-size: pxTorem(14px);
+    i {
+        font-size: pxTorem(16px);
+    }
 }
 
 .section {
     width: 100%;
     flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    .banner {
+        width: 100%;
+        height: pxTorem(304px);
+        >img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+    .right {
+        position: fixed;
+        top: 50%;
+        right: 5%;
+        margin-top: pxTorem(-100px);
+        dl {
+            margin-top: pxTorem(20px);
+            dt i {
+                font-size: pxTorem(16px);
+                color: #fff;
+            }
+            dd {
+                font-size: pxTorem(14px);
+                color: #fff;
+            }
+        }
+    }
+}
+
+.footer {
+    width: 100%;
+    height: pxTorem(50px);
+    ul {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 pxTorem(10px);
+        box-sizing: border-box;
+        li {
+            font-size: pxTorem(14px);
+        }
+    }
 }
